首页中间大类楼层

--- a/Application/Admin/View/Category/categoryEdit.html
+++ b/Application/Admin/View/Category/categoryEdit.html
@@ -30,8 +30,15 @@
                 </td>
             </tr>
             <tr>
+                 <td class="label">推荐到楼层：</td>
+                   <td>
+                    <input type="radio" name="is_floor" value="是" <?php if($data['is_floor'] == '是') echo "checked='checked'"; ?> />是
+                    <input type="radio" name="is_floor" value="否" <?php if($data['is_floor'] == '否') echo "checked='checked'"; ?> />否
+                </td>
+            </tr>
+            <tr>
                 <td colspan="99" align="center">
-                    <input type="submit" class="submit" value="确定" />
+                    <input type="submit" class="button" value="确定" />
                     <input type="reset" class="button" value="重置" />
                 </td>
             </tr>
