--- a/Application/Admin/View/Goods/goodsEdit.html
+++ b/Application/Admin/View/Goods/goodsEdit.html
@@ -140,6 +140,19 @@
                         <input type="radio" name="is_hot" value="否" <?php if($data['is_hot'] == '否') echo "checked='checked'"; ?> />否
                     </td>
                 </tr>
+                <tr>
+                    <td class="label">推荐到楼层：</td>
+                    <td>
+                        <input type="radio" name="is_floor" value="是" <?php if($data['is_floor'] == '是') echo "checked='checked'"; ?> />是
+                        <input type="radio" name="is_floor" value="否" <?php if($data['is_floor'] == '否') echo "checked='checked'"; ?> />否
+                    </td>
+                </tr>
+                <tr>
+                    <td class="label">排序：</td>
+                    <td>
+                        <input type="text" name="sort_num" value="<?php echo $data['sort_num']; ?>" size="8" />
+                    </td>
+                </tr>
             </table>
             <!-- 商品描述 -->
             <table style="display: none" width="90%" class="tab_table" align="center">
