--- a/Application/Admin/View/Category/categoryAdd.html
+++ b/Application/Admin/View/Category/categoryAdd.html
@@ -22,8 +22,15 @@
                 </td>
             </tr>
             <tr>
+                <td class="label">推荐到楼层：</td>
+                <td>
+                    <input type="radio" name="is_floor" value="是">是
+                    <input type="radio" name="is_floor" value="否" checked="checked">否
+                </td>
+            </tr>
+            <tr>
                 <td colspan="99" align="center">
-                    <input type="submit" class="submit" value="确定" />
+                    <input type="submit" class="button" value="确定" />
                     <input type="reset" class="button" value="重置" />
                 </td>
             </tr>
