修复后台重复载入jq代码错误

--- a/Application/Admin/View/Goods/goodsAdd.html
+++ b/Application/Admin/View/Goods/goodsAdd.html
@@ -174,14 +174,14 @@
 
 <!--导入在线编辑器 -->
 <link href="__PUBLIC__/umeditor1_2_2-utf8-php/themes/default/css/umeditor.css" type="text/css" rel="stylesheet">
-<script type="text/javascript" src="__PUBLIC__/umeditor1_2_2-utf8-php/third-party/jquery.min.js"></script>
+<!-- <script type="text/javascript" src="__PUBLIC__/umeditor1_2_2-utf8-php/third-party/jquery.min.js"></script> -->
 <script type="text/javascript" charset="utf-8" src="__PUBLIC__/umeditor1_2_2-utf8-php/umeditor.config.js"></script>
 <script type="text/javascript" charset="utf-8" src="__PUBLIC__/umeditor1_2_2-utf8-php/umeditor.min.js"></script>
 <script type="text/javascript" src="__PUBLIC__/umeditor1_2_2-utf8-php/lang/zh-cn/zh-cn.js"></script>
 <script>
 UM.getEditor('goods_desc', {
-    initialFrameWidth:"90%",
-    initialFrameHeight:350
+    initialFrameWidth : "100%",
+    initialFrameHeight : 350
 });
 </script>
 
@@ -276,8 +276,8 @@ function addNewAttr(a) {
 }
 </script>
 
-<!-- 引入时间插件 -->
-<script type="text/javascript" src="__PUBLIC__/datetimepicker/jquery-1.7.2.min.js"></script>
+<!-- 引入时间插件 --><!-- 
+<script type="text/javascript" src="__PUBLIC__/datetimepicker/jquery-1.7.2.min.js"></script> -->
 <link rel="stylesheet" type="text/css" href="__PUBLIC__/datetimepicker/jquery-ui-1.9.2.custom.min.css" />
 <script type="text/javascript" charset="utf-8" src="__PUBLIC__/datetimepicker/jquery-ui-1.9.2.custom.min.js"></script>
 <script type="text/javascript" charset="utf-8" src="__PUBLIC__/datetimepicker/datepicker-zh_cn.js"></script>
