--- a/Application/Home/View/Index/goods.html
+++ b/Application/Home/View/Index/goods.html
@@ -212,6 +212,7 @@
 								</table>
 							</p>
 						</li>
+						<li class="shop_price"><span>购买价格:</span><strong style="font-size: 25px;" id="member_price"></strong></li>
 						<li><span>上架时间：</span>2012-09-12</li>
 						<li class="star"><span>商品评分：</span> <strong></strong><a href="">(已有21人评价)</a></li> <!-- 此处的星级切换css即可 默认为5星 star4 表示4星 star3 表示3星 star2表示2星 star1表示1星 -->
 					</ul>
@@ -536,6 +537,15 @@
 			$("#display_history").html(html);
 		}
 	});
+
+	//AJAX计算会员价格
+	$.ajax({
+		type : "GET",
+		url : "<?php echo U('ajaxGetMemberPrice?goods_id='.$info['id']); ?>",
+		success : function(data){
+			$("#member_price").html("¥ "+data+"元");
+		}
+	})
 </script>
 
 
