购物车控制器，登录的时候购物车入库

--- a/Application/Home/View/Index/goods.html
+++ b/Application/Home/View/Index/goods.html
@@ -216,7 +216,9 @@
 						<li><span>上架时间：</span>2012-09-12</li>
 						<li class="star"><span>商品评分：</span> <strong></strong><a href="">(已有21人评价)</a></li> <!-- 此处的星级切换css即可 默认为5星 star4 表示4星 star3 表示3星 star2表示2星 star1表示1星 -->
 					</ul>
-					<form action="" method="post" class="choose">
+					<!-- 加入购物车表单 -->
+					<form action="<?php echo U('Cart/add'); ?>" method="post" class="choose">
+						<input type="hidden" name="goods_id" value="<?php echo $info['id']; ?>">
 						<ul>
 							<?php foreach ($mulArr as $k => $v): ?>
 								<li class="product">
@@ -225,7 +227,7 @@
 										<dd>
 											<?php foreach ($v as $k1 => $v1): ?>
 												<a href="javascript:;" <?php if($k1==0) echo 'class="selected"'; ?>><?php echo $v1['attr_value']; ?>
-													<input type="radio" name="color" <?php if($k1==0) echo 'checked="checked"'; ?> value="<?php echo $v1['attr_value']; ?>" />
+													<input type="radio" name="goods_attr_id[<?php echo $v1['attr_id']; ?>]" <?php if($k1==0) echo 'checked="checked"'; ?> value="<?php echo $v1['attr_value']; ?>" />
 												</a>
 											<?php endforeach; ?>
 										</dd>
@@ -237,7 +239,7 @@
 									<dt>购买数量：</dt>
 									<dd>
 										<a href="javascript:;" id="reduce_num"></a>
-										<input type="text" name="amount" value="1" class="amount"/>
+										<input type="text" name="goods_number" value="1" class="amount"/>
 										<a href="javascript:;" id="add_num"></a>
 									</dd>
 								</dl>
@@ -251,7 +253,6 @@
 									</dd>
 								</dl>
 							</li>
-
 						</ul>
 					</form>
 				</div>
