购物车功能初步

--- a/Application/Home/View/Common/nav.html
+++ b/Application/Home/View/Common/nav.html
@@ -71,12 +71,12 @@
 			<div class="cart fl">
 				<dl>
 					<dt>
-						<a href="">去购物车结算</a>
+						<a href="<?php echo U('Cart/lst'); ?>" id="cart_list">去购物车结算</a>
 						<b></b>
 					</dt>
 					<dd>
-						<div class="prompt">
-							购物车中还没有商品，赶紧选购吧！
+						<div class="prompt" id="cart_div_list">
+							<img src="__PUBLIC__/Home/images/loading.gif" />
 						</div>
 					</dd>
 				</dl>
@@ -138,3 +138,47 @@
 	<!-- 头部 end-->
 
 	<div style="clear:both;"></div>
+<script type="text/javascript">
+	<?php $ic = C('IMAGE_CONFIG'); ?>
+	var picView = "<?php echo $ic['viewPath']; ?>";
+	$("#cart_list").mouseover(function(){
+		$.ajax({
+			type : "GET",
+			url : "<?php echu U('Cart/ajaxCartList'); ?>",
+			dataType: "json",
+			success : function(data){
+				//拼出HTML放到页面中
+				var html = "<table>";
+				$(data).each(function(k,v){
+					html += "<tr>";
+					html += '<td><img width="50" src="'+picView+v.mid_logo+'" /></td>';
+					html += '<td>'+v.goods_name+'</td>';
+					html += '</tr>';
+				});
+				html += "</table>";
+				$("#cart_div_list").html(html);
+			}
+		});
+	});
+</script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
