修复了登录系统，购物车入库

--- a/Application/Home/View/Common/nav.html
+++ b/Application/Home/View/Common/nav.html
@@ -1,8 +1,9 @@
+<link rel="stylesheet" type="text/css" href="__PUBLIC__/Home/style/cart.css">
 <!-- 头部 start -->
 	<div class="header w1210 bc mt15">
 		<!-- 头部上半部分 start 包括 logo、搜索、用户中心和购物车结算 -->
 		<div class="logo w1210">
-			<h1 class="fl"><a href="index.html"><img src="__PUBLIC__/Home/images/logo.png" alt="京西商城"></a></h1>
+			<h1 class="fl"><a href="<?php echo U('Index/index'); ?>"><img src="__PUBLIC__/Home/images/logo.png" alt="京西商城"></a></h1>
 			<!-- 头部搜索 start -->
 			<div class="search fl">
 				<div class="search_form">
@@ -151,8 +152,8 @@
 				var html = "<table>";
 				$(data).each(function(k,v){
 					html += "<tr>";
-					html += '<td><img width="50" src="'+picView+v.mid_logo+'" /></td>';
-					html += '<td>'+v.goods_name+'</td>';
+					html += '<td><a href="/index.php/Home/Index/goods/id/'+v.goods_id+'"><img width="50" src="'+picView+v.mid_logo+'" /></a></td>';
+					html += '<td><a href="/index.php/Home/Index/goods/id/'+v.goods_id+'">'+v.goods_name+'</a></td>';
 					html += '</tr>';
 				});
 				html += "</table>";
