--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -171,8 +171,8 @@
 						<?php foreach($goods2 as $k => $v): ?>
 							<li>
 								<dl>
-									<dt><a href=""><?php showImage($v['mid_logo']); ?></a></dt>
-									<dd><a href=""><?php echo $v['goods_name']; ?></a></dd>
+									<dt><a href="<?php echo U('goods?id='.$v['id']); ?>"><?php showImage($v['mid_logo']); ?></a></dt>
+									<dd><a href="<?php echo U('goods?id='.$v['id']); ?>"><?php echo $v['goods_name']; ?></a></dd>
 									<dd><span>售价：</span><strong> ¥ <?php echo $v['shop_price']; ?>元</strong></dd>
 								</dl>
 							</li>
@@ -187,8 +187,8 @@
 						<?php foreach($goods3 as $k => $v): ?>
 							<li>
 								<dl>
-									<dt><a href=""><?php showImage($v['mid_logo']); ?></a></dt>
-									<dd><a href=""><?php echo $v['goods_name']; ?></a></dd>
+									<dt><a href="<?php echo U('goods?id='.$v['id']); ?>"><?php showImage($v['mid_logo']); ?></a></dt>
+									<dd><a href="<?php echo U('goods?id='.$v['id']); ?>"><?php echo $v['goods_name']; ?></a></dd>
 									<dd><span>售价：</span><strong> ¥ <?php echo $v['shop_price']; ?>元</strong></dd>
 								</dl>
 							</li>
@@ -203,8 +203,8 @@
 						<?php foreach($goods4 as $k => $v): ?>
 							<li>
 								<dl>
-									<dt><a href=""><?php showImage($v['mid_logo']); ?></a></dt>
-									<dd><a href=""><?php echo $v['goods_name']; ?></a></dd>
+									<dt><a href="<?php echo U('goods?id='.$v['id']); ?>"><?php showImage($v['mid_logo']); ?></a></dt>
+									<dd><a href="<?php echo U('goods?id='.$v['id']); ?>"><?php echo $v['goods_name']; ?></a></dd>
 									<dd><span>售价：</span><strong> ¥ <?php echo $v['shop_price']; ?>元</strong></dd>
 								</dl>
 							</li>
