--- a/Application/Home/View/Order/orderSuccess.html
+++ b/Application/Home/View/Order/orderSuccess.html
@@ -1,7 +1,6 @@
 <layout name="Common/layout" />
 <link rel="stylesheet" href="__PUBLIC__/Home/style/success.css" type="text/css">
 
-<body>
 	<div style="clear:both;"></div>
 	
 	<!-- 页面头部 start -->
@@ -18,7 +17,10 @@
 		</div>
 	</div>
 	<!-- 页面头部 end -->
-	
+	<style type="text/css">
+		#alipaysubmit{margin: 10px auto;width: 150px;}
+		#alipaysubmit input{cursor: pointer;padding: 5px;background: #F00;color: #FFF;font-weight: bold;font-size: 20px;border: 0;}
+	</style>
 	<div style="clear:both;"></div>	
 	<!-- 主体部分 start -->
 	<div class="success w990 bc mt15">
@@ -27,9 +29,8 @@
 		</div>
 		<div class="success_bd">
 			<p><span></span>订单提交成功，我们将及时为您处理</p>
-			
+			<p><?php echo $btn; ?></p>
 			<p class="message">完成支付后，你可以 <a href="">查看订单状态</a>  <a href="">继续购物</a> <a href="">问题反馈</a></p>
 		</div>
 	</div>
 	<!-- 主体部分 end -->
-</body>
