我的订单页

--- a/Application/Home/View/My/menu.html
+++ b/Application/Home/View/My/menu.html
@@ -4,7 +4,7 @@
 	<div class="menu_wrap">
 		<dl>
 			<dt>订单中心 <b></b></dt>
-			<dd class="cur"><b>.</b><a href="">我的订单</a></dd>
+			<dd class="cur"><b>.</b><a href="<?php echo U('order'); ?>">我的订单</a></dd>
 			<dd><b>.</b><a href="">我的关注</a></dd>
 			<dd><b>.</b><a href="">浏览历史</a></dd>
 			<dd><b>.</b><a href="">我的团购</a></dd>
