--- a/Application/Home/View/My/order.html
+++ b/Application/Home/View/My/order.html
@@ -51,7 +51,7 @@
 								<td><a href=""><?php $_arr = explode(',',$v['logo']); foreach($_arr as $k1 => $v1) showImage($v1); ?></a></td>
 								<td><?php echo $v['shr_name']; ?></td>
 								<td>¥<?php echo $v['total_price']; ?></td>
-								<td><?php echo date(Y-m-d H:i:s, $v['addtime']); ?></td>
+								<td><?php echo date('Y-m-d H:i:s', $v['addtime']); ?></td>
 								<td>
 									<?php if($v['pay_status'] == '是'): ?>
 										已支付
@@ -60,7 +60,7 @@
 									<?php endif; ?>
 								</td>
 								<td>
-									<?php if($['pay_status'] == '否'): ?>
+									<?php if($v['pay_status'] == '否'): ?>
 										<a href="">查看</a> | <a href="">取消定单</a>
 									<?php endif; ?>
 								</td>
