我的订单页面显示用户的昵称

--- a/Application/Admin/View/Order/orderList.html
+++ b/Application/Admin/View/Order/orderList.html
@@ -1,39 +1,11 @@
-<layout name="Common/layout" />
+<layout name="layout" />
 <link rel="stylesheet" href="__PUBLIC__/Home/style/home.css" type="text/css">
 <link rel="stylesheet" href="__PUBLIC__/Home/style/order.css" type="text/css">
 <script type="text/javascript" src="__PUBLIC__/Home/js/home.js"></script>
-<style type="text/css">
-	#page-table a{padding:5px;border: 1px solid #F00;margin: 5px;}
-	#page-table span.current{padding: 5px;background: #F00;margin: 5px;color: #FFF;font-weight: bold;}
-</style>
-
-<include file="Common/nav" />
-<body>
 	<!-- 页面主体 start -->
 	<div class="main w1210 bc mt10">
-		<div class="crumb w1210">
-			<h2><strong><?php echo $data['data'][10]['username']; ?></strong><span>> 我的订单</span></h2>
-		</div>
-
-		<include file="My/menu" />
-
 		<!-- 右侧内容区域 start -->
 		<div class="content fl ml10">
-			<div class="order_hd">
-				<h3>我的订单</h3>
-				<dl>
-					<dt>便利提醒：</dt>
-					<dd>待付款（<?php echo $data['noPayCount']; ?>）</dd>
-					<dd>待确认收货（0）</dd>
-					<dd>待自提（0）</dd>
-				</dl>
-
-				<dl>
-					<dt>特色服务：</dt>
-					<dd><a href="">我的预约</a></dd>
-					<dd><a href="">夺宝箱</a></dd>
-				</dl>
-			</div>
 
 			<div class="order_bd mt10">
 				<table class="orders">
@@ -41,7 +13,7 @@
 						<tr>
 							<th width="10%">订单号</th>
 							<th width="20%">订单商品</th>
-							<th width="10%">收货人</th>
+							<th width="10%">下单会员ID</th>
 							<th width="20%">订单金额</th>
 							<th width="20%">下单时间</th>
 							<th width="10%">订单状态</th>
@@ -53,14 +25,14 @@
 							<tr>
 								<td><?php echo $v['id']; ?></td>
 								<td><a href=""><?php $_arr = explode(',',$v['logo']); foreach($_arr as $k1 => $v1) showImage($v1); ?></a></td>
-								<td><?php echo $v['shr_name']; ?></td>
+								<td><?php echo $v['member_id']; ?></td>
 								<td>¥<?php echo $v['total_price']; ?></td>
 								<td><?php echo date('Y-m-d H:i:s', $v['addtime']); ?></td>
 								<td>
 									<?php if($v['pay_status'] == '是'): ?>
 										已支付
 									<?php else: ?>
-										<?php echo makeAlipayBtn($v['id']); ?>
+										未支付
 									<?php endif; ?>
 								</td>
 								<td>
@@ -74,6 +46,7 @@
 						<?php endforeach; ?>
 					</tbody> 
 				</table>
+<!-- 				<p><?php echo $data['page']; ?></p> -->
 				<table id="page-table" cellspacing="0">
 					<tr>
 						<td width="80%">&nbsp;</td>
@@ -87,5 +60,3 @@
 		<!-- 右侧内容区域 end -->
 	</div>
 	<!-- 页面主体 end-->
-
-<include file="Common/help" />
