--- a/Application/Home/View/Search/catSearch.html
+++ b/Application/Home/View/Search/catSearch.html
@@ -81,7 +81,7 @@
 					<ul>
 						<li>
 							<dl>
-								<dt><a href=""><img src="images/list_hot1.jpg" alt="" /></a></dt>
+								<dt><a href=""><img src="__PUBLIC__/Home/images/list_hot1.jpg" alt="" /></a></dt>
 								<dd><a href="">美即流金丝语悦白美颜新年装4送3</a></dd>
 								<dd><strong>￥777.50</strong></dd>
 							</dl>
@@ -89,7 +89,7 @@
 
 						<li>
 							<dl>
-								<dt><a href=""><img src="images/list_hot2.jpg" alt="" /></a></dt>
+								<dt><a href=""><img src="__PUBLIC__/Home/images/list_hot2.jpg" alt="" /></a></dt>
 								<dd><a href="">领券满399减50 金斯利安多维片</a></dd>
 								<dd><strong>￥239.00</strong></dd>
 							</dl>
@@ -97,7 +97,7 @@
 
 						<li class="last">
 							<dl>
-								<dt><a href=""><img src="images/list_hot3.jpg" alt="" /></a></dt>
+								<dt><a href=""><img src="__PUBLIC__/Home/images/list_hot3.jpg" alt="" /></a></dt>
 								<dd><a href="">皮尔卡丹pierrecardin 男士长...</a></dd>
 								<dd><strong>￥1240.50</strong></dd>
 							</dl>
@@ -123,12 +123,12 @@
 				<h2><a href="">清空</a><strong>最近浏览过的商品</strong></h2>
 				<div class="leftbar_wrap">
 					<dl>
-						<dt><a href=""><img src="images/hpG4.jpg" alt="" /></a></dt>
+						<dt><a href=""><img src="__PUBLIC__/Home/images/hpG4.jpg" alt="" /></a></dt>
 						<dd><a href="">惠普G4-1332TX 14英寸笔记...</a></dd>
 					</dl>
 
 					<dl class="last">
-						<dt><a href=""><img src="images/crazy4.jpg" alt="" /></a></dt>
+						<dt><a href=""><img src="__PUBLIC__/Home/images/crazy4.jpg" alt="" /></a></dt>
 						<dd><a href="">直降200元！TCL正1.5匹空调</a></dd>
 					</dl>
 				</div>
@@ -147,7 +147,7 @@
 					<ul>
 						<li>
 							<dl>
-								<dt><a href=""><img src="images/hpG4.jpg" alt="" /></a></dt>
+								<dt><a href=""><img src="__PUBLIC__/Home/images/hpG4.jpg" alt="" /></a></dt>
 								<dd class="name"><a href="">惠普G4-1332TX 14英寸笔记本电脑 （i5-2450M 2G 5</a></dd>
 								<dd class="price">特价：<strong>￥2999.00</strong></dd>
 								<dd class="buy"><span>立即抢购</span></dd>
@@ -156,7 +156,7 @@
 
 						<li>
 							<dl>
-								<dt><a href=""><img src="images/list_hot3.jpg" alt="" /></a></dt>
+								<dt><a href=""><img src="__PUBLIC__/Home/images/list_hot3.jpg" alt="" /></a></dt>
 								<dd class="name"><a href="">ThinkPad E42014英寸笔记本电脑</a></dd>
 								<dd class="price">特价：<strong>￥4199.00</strong></dd>
 								<dd class="buy"><span>立即抢购</span></dd>
@@ -165,7 +165,7 @@
 
 						<li>
 							<dl>
-								<dt><a href=""><img src="images/acer4739.jpg" alt="" /></a></dt>
+								<dt><a href=""><img src="__PUBLIC__/Home/images/acer4739.jpg" alt="" /></a></dt>
 								<dd class="name"><a href="">宏碁AS4739-382G32Mnkk 14英寸笔记本电脑</a></dd>
 								<dd class="price">特价：<strong>￥2799.00</strong></dd>
 								<dd class="buy"><span>立即抢购</span></dd>
@@ -199,56 +199,27 @@
 				<div class="filter_wrap">
 					<dl>
 						<dt>品牌：</dt>
-						<dd class="cur"><a href="">不限</a></dd>
-						<dd><a href="">联想（ThinkPad）</a></dd>
-						<dd><a href="">联想（Lenovo）</a></dd>
-						<dd><a href="">宏碁（acer）</a></dd>
-						<dd><a href="">华硕（ASUS）</a></dd>
-						<dd><a href="">戴尔（DELL）</a></dd>
-						<dd><a href="">索尼（SONY）</a></dd>
-						<dd><a href="">惠普（HP）</a></dd>
-						<dd><a href="">三星（SAMSUNG）</a></dd>
-						<dd><a href="">优派（ViewSonic）</a></dd>
-						<dd><a href="">苹果（Apple）</a></dd>
-						<dd><a href="">富士通（Fujitsu）</a></dd>
+						<?php foreach ($searchFilter['brand'] as $k => $v): ?>
+							<dd><a href=""><?php echo $v['brand_name']; ?></a></dd>
+						<?php endforeach; ?>
 					</dl>
 
 					<dl>
 						<dt>价格：</dt>
-						<dd class="cur"><a href="">不限</a></dd>
-						<dd><a href="">1000-1999</a></dd>
-						<dd><a href="">2000-2999</a></dd>
-						<dd><a href="">3000-3499</a></dd>
-						<dd><a href="">3500-3999</a></dd>
-						<dd><a href="">4000-4499</a></dd>
-						<dd><a href="">4500-4999</a></dd>
-						<dd><a href="">5000-5999</a></dd>
-						<dd><a href="">6000-6999</a></dd>
-						<dd><a href="">7000-7999</a></dd>
+						<?php foreach ($searchFilter['price'] as $k => $v): ?>
+							<dd><a href=""><?php echo $v; ?></a></dd>
+						<?php endforeach; ?>
 					</dl>
 
+					<!-- 筛选属性 -->
+					<?php foreach ($searchFilter['gaData'] as $k => $v): ?>
 					<dl>
-						<dt>尺寸：</dt>
-						<dd class="cur"><a href="">不限</a></dd>
-						<dd><a href="">10.1英寸及以下</a></dd>
-						<dd><a href="">11英寸</a></dd>
-						<dd><a href="">12英寸</a></dd>
-						<dd><a href="">13英寸</a></dd>
-						<dd><a href="">14英寸</a></dd>
-						<dd><a href="">15英寸</a></dd>
+						<dt><?php echo $k; ?>:</dt>
+						<?php foreach ($v as $k1 => $v1): ?>
+							<dd><a href=""><?php echo $v1['attr_value']; ?></a></dd>
+						<?php endforeach; ?>
 					</dl>
-
-					<dl class="last">
-						<dt>处理器：</dt>
-						<dd class="cur"><a href="">不限</a></dd>
-						<dd><a href="">intel i3</a></dd>
-						<dd><a href="">intel i5</a></dd>
-						<dd><a href="">intel i7</a></dd>
-						<dd><a href="">AMD A6</a></dd>
-						<dd><a href="">AMD A8</a></dd>
-						<dd><a href="">AMD A10</a></dd>
-						<dd><a href="">其它intel平台</a></dd>
-					</dl>
+					<?php endforeach; ?>
 				</div>
 			</div>
 			<!-- 商品筛选 end -->
@@ -274,7 +245,7 @@
 				<ul>
 					<li>
 						<dl>
-							<dt><a href=""><img src="images/goods1.jpg" alt="" /></a></dt>
+							<dt><a href=""><img src="__PUBLIC__/Home/images/goods1.jpg" alt="" /></a></dt>
 							<dd><a href="">清华同方精锐X2 台式电脑（双核E3500 2G 500G DVD 键鼠）带20英寸显示器</a></dt>
 							<dd><strong>￥2399.00</strong></dt>
 							<dd><a href=""><em>已有10人评价</em></a></dt>
@@ -283,7 +254,7 @@
 
 					<li>
 						<dl>
-							<dt><a href=""><img src="images/goods2.jpg" alt="" /></a></dt>
+							<dt><a href=""><img src="__PUBLIC__/Home/images/goods2.jpg" alt="" /></a></dt>
 							<dd><a href="">富士通LH531 14.1英寸笔记本电脑（i3-2350M 2G 320G 第二代核芯显卡 D刻</a></dd>
 							<dd><strong>￥2999.00</strong></dd>
 							<dd><a href=""><em>已有5人评价</em></a></dd>
@@ -292,7 +263,7 @@
 
 					<li>
 						<dl>
-							<dt><a href=""><img src="images/goods3.jpg" alt="" /></a></dt>
+							<dt><a href=""><img src="__PUBLIC__/Home/images/goods3.jpg" alt="" /></a></dt>
 							<dd><a href="">三星Galaxy Tab P6800 7.7英寸 3G手机版 蓝牙3.0 魔丽屏 金属银</a></dd>
 							<dd><strong>￥4699.00</strong></dd>
 							<dd><a href=""><em>已有34人评价</em></a></dd>
@@ -301,7 +272,7 @@
 
 					<li>
 						<dl>
-							<dt><a href=""><img src="images/goods4.jpg" alt="" /></a></dt>
+							<dt><a href=""><img src="__PUBLIC__/Home/images/goods4.jpg" alt="" /></a></dt>
 							<dd><a href="">宏碁AS4739-382G32Mnkk 14英寸笔记本电脑（i3-380M 2G 320G D刻 LED背</a></dd>
 							<dd><strong>￥2799.00</strong></dd>
 							<dd><a href=""><em>已有17人评价</em></a></dd>
@@ -310,7 +281,7 @@
 
 					<li>
 						<dl>
-							<dt><a href=""><img src="images/goods5.jpg" alt="" /></a></dt>
+							<dt><a href=""><img src="__PUBLIC__/Home/images/goods5.jpg" alt="" /></a></dt>
 							<dd><a href="">ThinkPad E42014英寸笔记本电脑（i5-2450M 2G 320G 蓝牙 摄像头）</a></dd>
 							<dd><strong>￥4199.00</strong></dd>
 							<dd><a href=""><em>已有8人评价</em></a></dd>
@@ -319,7 +290,7 @@
 
 					<li>
 						<dl>
-							<dt><a href=""><img src="images/goods6.jpg" alt="" /></a></dt>
+							<dt><a href=""><img src="__PUBLIC__/Home/images/goods6.jpg" alt="" /></a></dt>
 							<dd><a href="">惠普G4-1332TX 14英寸笔记本电脑 （i5-2450M 2G 500G 7450M 1G独显 D刻</a></dd>
 							<dd><strong>￥2999.00</strong></dd>
 							<dd><a href=""><em>已有22人评价</em></a></dd>
