--- a/Application/Home/View/Search/catSearch.html
+++ b/Application/Home/View/Search/catSearch.html
@@ -194,29 +194,72 @@
 			<div style="clear:both;"></div>
 			
 			<!-- 商品筛选 start -->
+			<div id="search_condition">
+				当前搜索条件:
+				<?php
+				$brandId = I('get.brand_id');
+				if($brandId): ?>
+					<span>
+						品牌：<?php echo ltrim(strstr($brandId,'-'),'-'); ?>
+						<a href="<?php echo filterUrl('brand_id'); ?>">X</a>
+					</span>
+				<?php endif; ?>
+				<?php 
+				$price = I('get.price');
+				if($price): ?>
+					<span>
+						价格：<?php echo $price; ?>
+						<a href="<?php echo filterUrl('price'); ?>">X</a>
+					</span>
+				<?php endif; ?>
+				<?php
+				//筛选属性 参数:/attr_5/android-操作系统/attr_4/2015-10-01-出厂日期
+				//循环所有的参数
+				foreach($_GET as $k => $v):
+					//如果以attr_开头说明是一个属性的变量
+					if(strpos($k, 'attr_') === 0):
+						$_attrName = strrchr($v,'-');	//取出属性名称
+					?>
+					<span>
+						<?php echo ltrim($_attrName,'-'); ?>:<?php echo str_replace($_attrName,'',$v); ?>
+						<a href="<?php echo filterUrl($k); ?>">X</a>
+					</span>
+				<?php endif;endforeach; ?>
+
+			</div>
 			<div class="filter mt10">
 				<h2><a href="">重置筛选条件</a> <strong>商品筛选</strong></h2>
 				<div class="filter_wrap">
+					<?php if(!I('get.brand_id')): ?>
 					<dl>
 						<dt>品牌：</dt>
 						<?php foreach ($searchFilter['brand'] as $k => $v): ?>
-							<dd><a href=""><?php echo $v['brand_name']; ?></a></dd>
+							<dd><a href="__SELF__/brand_id/<?php echo $v['brand_id']; ?>-<?php echo $v['brand_name']; ?>"><?php echo $v['brand_name']; ?></a></dd>
 						<?php endforeach; ?>
 					</dl>
-
+					<?php endif; ?>
+					
+					<?php if(!I('get.price')): ?>
 					<dl>
 						<dt>价格：</dt>
 						<?php foreach ($searchFilter['price'] as $k => $v): ?>
-							<dd><a href=""><?php echo $v; ?></a></dd>
+							<dd><a href="__SELF__/price/<?php echo $v; ?>"><?php echo $v; ?></a></dd>
 						<?php endforeach; ?>
 					</dl>
+					<?php endif; ?>
 
 					<!-- 筛选属性 -->
-					<?php foreach ($searchFilter['gaData'] as $k => $v): ?>
+					<?php foreach ($searchFilter['gaData'] as $k => $v): 
+						//评出属性在URL上的名
+						$attrUrlName = 'attr_'.$v[0]['attr_id'];	//attr_xx
+						//如果URL里面已经有这个名字说明已经点击了就跳过不显示
+						if(isset($_GET[$attrUrlName]))
+							continue
+					?>
 					<dl>
 						<dt><?php echo $k; ?>:</dt>
 						<?php foreach ($v as $k1 => $v1): ?>
-							<dd><a href=""><?php echo $v1['attr_value']; ?></a></dd>
+							<dd><a href="__SELF__/<?php echo $attrUrlName; ?>/<?php echo $v1['attr_value']; ?>-<?php echo $k; ?>"><?php echo $v1['attr_value']; ?></a></dd>
 						<?php endforeach; ?>
 					</dl>
 					<?php endforeach; ?>
