根据关键字搜索商品

--- a/Application/Home/View/Common/nav.html
+++ b/Application/Home/View/Common/nav.html
@@ -9,7 +9,8 @@
 				<div class="search_form">
 					<div class="form_left fl"></div>
 					<form action="" name="serarch" method="get" class="fl">
-						<input type="text" class="txt" value="请输入商品关键字" /><input type="submit" class="btn" value="搜索" />
+						<input type="text" name="key" id="key" class="txt" value="请输入商品关键字" />
+						<input type="button" class="btn" value="搜索" onclick="location.href='<?php echo U('Search/keySearch','',FALSE); ?>/key/'+$('#key').val()"" />
 					</form>
 					<div class="form_right fl"></div>
 				</div>
