--- a/Application/Home/View/Index/goods.html
+++ b/Application/Home/View/Index/goods.html
@@ -8,6 +8,9 @@
 
 <script type="text/javascript" src="__PUBLIC__/Home/js/goods.js"></script>
 <script type="text/javascript" src="__PUBLIC__/Home/js/jqzoom-core.js"></script>
+
+<link rel="stylesheet" type="text/css" href="__PUBLIC__/jquery-ui-1.9.2.custom/css/blitzer/jquery-ui-1.9.2.custom.css">
+<script type="text/javascript" src="__PUBLIC__/jquery-ui-1.9.2.custom/js/jquery-ui-1.9.2.custom.js"></script>
 	
 <!-- jqzoom 效果 -->
 <script type="text/javascript">
